2005-01-29 17:02 Gregory John Casamento <greg_casamento@yahoo.com>
                 README.rtf from tarzeau.
	* English.lproj/TimeMon.gorm: Correction to make text view resize
	correctly.
	* README.rtf: Updated with corrected spelling and some additional
	info.  
	* TimeMonWraps.h: Removed uneeded prototypes.

2005-01-29 13:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* NSColorExtensions.m
	* Percentages.m
	* TimeMonColors.m
	* TimeMon_main.m: reformatted to GNU style.

2005-01-29 07:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m
	* TimeMonColors.m: Code cleanup to make things fit the
	GNU style a little better.

2005-01-28 23:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m: In [Percentages update] release the representation
	which is created to avoid a memory leak.

2005-01-28 22:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: Corrected resize problem.
	* GNUmakefile: Added new classes
	* NSColorExtensions.[hm]: Category which allows the persistence
	of a color in the defaults.  Used in TimeMonColors and TimeMonWraps.
	* TimeMonColors.m: Import color extensions.
	* TimeMonWraps.m: Import color extensions.  Get colors from defaults
	in drawArc2() function.

2005-01-28 22:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm
	* GNUmakefile
	* TimeMonColors.m
	* TimeMonWraps.m

2005-01-25 09:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m: Removed some of the extra errors and 
	added one which makes sense for how it is reading the
	/proc/stat file now.

2005-01-25 00:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m: Reformatted some code
	* TimeMonColors.m: Reformatter some code
	* TimeMonP.png: Composited icon and "NO" sign
	* TimeMonWraps.m: Changed colors

2005-01-23 22:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: Added readmeText outlet and 
	connection.